changes for changes in config manager
changes to include bs id as an arguement 

changes to wait for obs.completed